--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,7 @@
     "unlimitedStorage",
     "contextMenus",
     "alarms",
-    "webNavigation"
+    "system.memory"
   ],
   "background": {
     "scripts": ["js/db.js", "js/storage.js", "js/tabStates.js", "js/eventPage.js"],
@@ -33,6 +33,10 @@
   "minimum_chrome_version": "54",
 
   "commands": {
+    "1-discard-tab": {
+      "description": "Discard active tab",
+      "suggested_key": { "default": "Ctrl+Shift+S" }
+    },
     "3-discard-active-window": {
       "description": "Discard all tabs in active window"
     },
