--- a/src/manifest.json
+++ b/src/manifest.json
@@ -27,7 +27,7 @@
     "48": "img/icon48.png",
     "128": "img/icon128.png"
   },
-  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
+  "content_security_policy": "script-src 'self'; object-src 'self'",
   "incognito": "split",
   "manifest_version": 2,
   "minimum_chrome_version": "54",
